# OS-labki

./: CMakeLists.txt  README.md  compile_commands.json  make
course-project/: CMakeLists.txt  compile_commands.json  main.cpp  make.sh  run.sh  run1.sh
course-project/db/: sample.txt
course-project/doc/: report.aux  report.tex
course-project/executables/: client  room  server  test
course-project/include/: allias.hpp  game_utils.h  game_utils.hpp  server_utils.hpp  utils.hpp  zmq_utils.hpp
course-project/input/: 1_1.txt  1_2.txt
course-project/src/: client.cpp  game_utils.c  game_utils.cpp  gamer.c  room.c  room.cpp  server.cpp  server_utils.cpp  utils.cpp  zmq_utils.cpp
doc/: course-project_title.tex  includes.tex  lab1_title.tex  lab2_title.tex  lab3_title.tex  lab4_title.tex  lab5_title.tex  lab6_title.tex
lab1/doc/: report.aux  report.tex  strace_output.txt
lab2/: CMakeLists.txt  compile_commands.json  lab2  main.c  main.cpp  make  make.sh
lab2/doc/: report.aux  report.tex
lab2/include/: child.h  child.hpp  parent.h  parent.hpp  utils.h  utils.hpp
lab2/src/: child.c  child.cpp  parent.c  parent.cpp  utils.c  utils.cpp
lab3/: CMakeLists.txt  compile_commands.json  main.cpp  make  make.sh
lab3/doc/: report.aux  report.tex
lab3/include/: body.hpp  utils.hpp
lab3/src/: body.cpp  utils.cpp
lab4/: CMakeLists.txt  compile_commands.json  lab4  main.c  make  make.sh
lab4/doc/: report.aux  report.tex
lab4/include/: parent.h  utils.h
lab4/src/: parent.c  parent_improved.c  utils.c
lab5/: CMakeLists.txt  compile_commands.json  make.sh
lab5/doc/: report.aux  report.tex
lab5/include/: libLab5.h
lab5/src/: derivative.c  integral.c  lib1.c  lib2.c  out  program1.c  program2.c
lab6/: CMakeLists.txt  compile_commands.json  main.cpp  make.sh  run.sh
lab6/doc/: report.aux  report.tex
lab6/include/: node_attributes.hpp  server_utils.hpp  zmq_utils.hpp
lab6/input/: 1.txt  simple.txt
lab6/scripts/: client-computing_node.sh  client-server.sh  debug.sh  make.sh
lab6/src/: calculate.cpp  client.cpp  computing_node.cpp  node_attributes.cpp  server.cpp  server_utils.cpp  wrapped_node.cpp  zmq_utils.cpp
lab6_docked/: docker-compose.yml
lab6_docked/DockUtils/: Dockerfile
lab6_docked/client/DockSrc/: CMakeLists.txt
lab6_docked/client/DockSrc/input/: simple.txt
lab6_docked/client/DockSrc/src/: client.cpp
lab6_docked/server/: Dockerfile
lab6_docked/server/DockSrc/: CMakeLists.txt
lab6_docked/server/DockSrc/include/: server_utils.hpp  zmq_utils.hpp
lab6_docked/server/DockSrc/src/: node_attributes.cpp  server.cpp  server_utils.cpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_1_test.cpp  lab5_2_test.cpp
utils/: clean  make  make.sh
utils/legal/: lab2.txt  lab3.txt  main
